--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -19,7 +19,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "\n"
+    "import matplotlib.pyplot as plt \n",
+    "import sklearn"
    ]
   },
   {
